# EMBEBIDOS_CAPTURA_DE_DATOS

./: log.txt
Max30100/Max30100/main/: CMakeLists.txt  app_config.h  app_tasks.c  app_tasks.h  data_model.h  espnow_tx.c  espnow_tx.h  main.c  max30100.c  max30100.h  signal_proc.c  signal_proc.h
QMI8658/QMI8658/main/: CMakeLists.txt  app_config.h  app_core.c  app_core.h  app_display.c  app_display.h  app_display_task.c  app_display_task.h  app_radio.c  app_radio.h  app_radio_packet.h  app_sensor.c  app_sensor.h  app_sensor_task.c  app_sensor_task.h  main.c
html/: _e_s_p_c_a_m_2_e_s_p_c_a_m_2build_2bootloader_2config_2sdkconfig_8h_source.html  _e_s_p_c_a_m_2_e_s_p_c_a_m_2build_2config_2sdkconfig_8h_source.html  _e_s_p_c_a_m_2_e_s_p_c_a_m_2main_2data__model_8h_source.html  _m_p_u6050_2_m_p_u6050_2build_2bootloader_2config_2sdkconfig_8h_source.html  _m_p_u6050_2_m_p_u6050_2build_2config_2sdkconfig_8h_source.html  _m_p_u6050_2_m_p_u6050_2main_2app__config_8h_source.html  _m_p_u6050_2_m_p_u6050_2main_2app__tasks_8h_source.html  _m_p_u6050_2_m_p_u6050_2main_2data__model_8h_source.html  _m_p_u6050_2_m_p_u6050_2main_2espnow__tx_8h_source.html  _m_p_u6050_2_m_p_u6050_2main_2main_8c.html  _m_p_u6050_2_m_p_u6050_2main_2main_8c.js  _m_p_u6050_2_m_p_u6050_2main_2max30100_8h_source.html  _m_p_u6050_2_m_p_u6050_2main_2signal__proc_8h_source.html  _max30100_2_max30100_2build_2bootloader_2config_2sdkconfig_8h_source.html  _max30100_2_max30100_2build_2config_2sdkconfig_8h_source.html  _max30100_2_max30100_2main_2app__config_8h_source.html  _max30100_2_max30100_2main_2app__tasks_8c.html  (+222 more)
(+497 files in other folders)
